// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignDidExtrinsic should allow signing with full did 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with on-chain DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            KILT Identity 2
          </span>
        </div>
      </section>
      <a
        aria-label="KILT Identity 1"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="KILT Identity 1"
      />
      <a
        aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="KILT Identity 3 which has a very long name and might not even fit on the screen"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <dl
      class="details"
    >
      <dt
        class="detailName"
      >
        from
        :
      </dt>
      <dd
        class="detailValue"
        title="extremely-long-domain-name-tries-to-overflow-all-available-space-and-just-keeps-going-and-going-and-going.com"
      >
        extremely-long-domain-name-tries-to-overflow-all-available-space-and-just-keeps-going-and-going-and-going.com
      </dd>
      <dt
        class="detailName"
      >
        method data
        :
      </dt>
      <dd
        class="detailValue"
        title="namespace.method(input = \\"some meaningful values you would definitely like to see\\")"
      >
        namespace.method(input = "some meaningful values you would definitely like to see")
      </dd>
    </dl>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
        hidden=""
      >
        You need to upgrade to an on-chain DID first
      </output>
    </p>
  </form>
</div>
`;

exports[`SignDidExtrinsic should render 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with on-chain DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInNpZ25lciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <dl
      class="details"
    >
      <dt
        class="detailName"
      >
        from
        :
      </dt>
      <dd
        class="detailValue"
        title="extremely-long-domain-name-tries-to-overflow-all-available-space-and-just-keeps-going-and-going-and-going.com"
      >
        extremely-long-domain-name-tries-to-overflow-all-available-space-and-just-keeps-going-and-going-and-going.com
      </dd>
      <dt
        class="detailName"
      >
        method data
        :
      </dt>
      <dd
        class="detailValue"
        title="namespace.method(input = \\"some meaningful values you would definitely like to see\\")"
      >
        namespace.method(input = "some meaningful values you would definitely like to see")
      </dd>
    </dl>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        disabled=""
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
      >
        You need to upgrade to an on-chain DID first
      </output>
    </p>
  </form>
</div>
`;
